Commit-07 - Debugging and Responsiveness

--- a/Portfolio_Main_Site/project-flower.html
+++ b/Portfolio_Main_Site/project-flower.html
@@ -19,7 +19,7 @@
         <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
         <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
         <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
-        <a href="index.html#contact" class="nav-main-items" id="projects-nav">Contact</a>
+        <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a>
     </nav>
 
     <div class="element-container">
@@ -106,7 +106,15 @@
     <div class="element-container empty-block"></div>
     <!-- This creates a footer that can contain texts and images -->
     <div class="footer">
-    </div>
+            <a class="justify-footer-content element-container" href="https://github.com/SYuennan/Portfolio"> Github
+               </a>
+        
+            <a class="justify-footer-content element-container"
+              href="http://www.sfu.ca/~syuennan/Portfolio/Portfolio_Style_Guide_&_Sample_Templates/"> StyleGuide</a>
+        
+              <a class="justify-footer-content element-container"
+              href="https://stevenyuennan.wixsite.com/portfolio"> Previous Portfolio</a>
+          </div>
 </body>
 
 </html>
