--- a/Portfolio_Style_Guide_&_Sample_Templates/index.html
+++ b/Portfolio_Style_Guide_&_Sample_Templates/index.html
@@ -135,12 +135,15 @@
       <h3 class="sub-header-contents">Paragraphs</h3>
       <div class="element-container">
         <div class="justify-body-content">
-          <p> As an aspiring video game developer, and studying in game design at
+          <p> My name is Sirawit Yuennan. I am specialized in game design, character design, 3D modelling and
+            animations.
+            As an aspiring video game developer, and studying in game design at
             Simon Fraser University's School of Interactive and Technology. Aside of studying,
             I'm working with a game development team as the 3D modeller and animator. Our current project is an artistic
-            mobile game which will be planned for a winter 2019 My skill sets including
+            mobile game which will be planned for a winter 2019. My skill sets including
             knowledge in 3D modelling/animations, and game design. While my technical skills include using
-            Unity 3D Engine, Blender, Maya and Live2D Engine. </p>
+            Unity 3D Engine, Blender, Maya and Live2D Engine. Despite having a versatile skill sets, my focus is
+            on 3D works, especially animations. </p>
         </div>
         <div class="justify-body-content">
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sapien arcu, malesuada et urna sed,
@@ -185,38 +188,65 @@
     <div class="container-border">
       <h3 class="sub-header-contents">Project Canvas</h3>
 
-      <div class="justify-centered-left-body-content">
-        <p> This project was an arcade mobile game in a form of an "endless runner" with simple controls and mechanics
-          that can be picked up and played by non-gamers. This game was created using Unity 3D. The 3D art assets were
-          created using Blender, while the 2D assets were created using Clip Studio.
-        </p>
-      </div>
+      <h1 class="element-container header-contents">Canvas</h1>
 
-      <div class="justify-centered-left-body-content">
-        <p>
-          The development time for this project was one month from 4 months and with a team of 4.
-          It becomes a massive issue as my experience was not at
-          the level I was comfortable with to create such a project and I didn't have a team to rely on.
-          With such a small development window, I had to manage my time
-          carefully. Not only I had to design the game with the players in mind but my own abilities and limitations
-          as well. This would mean that my own creativity in designs would be hindered by my skills.
-        </p>
+      <div class="element-container video-url">
+          <iframe width="720" height="480" src="https://www.youtube.com/embed/vux8WYP_LEs">
+          </iframe>
       </div>
-
+  
       <div class="justify-centered-left-body-content">
-        <p>
-          The condition I set for myself is that it must have a core loop that is small and engaging
-          enough for the players. While the programming tasks must be within my skill level.
-          Lastly, it should look polished with appealing aesthetic to create a visual appeal.
-        </p>
+          <p>This project was an arcade mobile game in a form of an "endless runner" with simple controls and mechanics
+              that can be picked up and played by non-gamers. This game was created using Unity 3D. The 3D art assets were
+              created using Blender, while the 2D assets were created using Clip Studio.
+  
+          </p>
       </div>
-
-      <div class="justify-centered-left-body-content">
-        <p>
-          Following these 3 principles, I was able to finish the project in time with a positive feedback
-          and amazements by both my peers and professor to be able to pull of a project in such a handicapped
-          situation. Although there were still some concerns with the design, they can easily be solved.
-        </p>
+  
+  
+      <h1 class="element-container header-contents">Problem</h1>
+  
+      <div class="element-container">
+          <div class="justify-body-content">
+              <p>
+                  The development time for this project was one month from 4 months and with a team of 4. It becomes a
+                  massive
+                  issue as my experience was not at the level I was comfortable with to create such a project and I didn't
+                  have a team to rely on. With such a small development window, I had to manage my time carefully. Not
+                  only I
+                  had to design the game with the players in mind but my own abilities and limitations as well. This would
+                  mean that my own creativity in designs would be hindered by my skills.
+              </p>
+          </div>
+  
+          <div class="justify-body-content"> <img src="Resources/Project-Canvas-thumbnail1.png" class="project-screenshot"
+                  alt="project-flower-huntsman">
+          </div>
+      </div>
+  
+      <h1 class="element-container header-contents">Solution</h1>
+  
+      <div class="element-container">
+  
+          <div class="justify-body-content"> <img src="Resources/ShipSS.png" class="project-screenshot" id="protagonist"
+                  alt="project-flower-protagonist">
+          </div>
+  
+          <div class="justify-body-content">
+              <p>
+                  The condition I set for myself is that it must have a core loop that is small and engaging enough for
+                  the players. While the programming tasks must be within my skill level. Lastly, it should look polished
+                  with appealing aesthetic to create a visual appeal.
+              </p>
+          </div>
+      </div>
+      <h1 class="element-container header-contents">Reflection</h1>
+      <div class="justify-project-body-content">
+          <p>
+              Following these 3 principles, I was able to finish the project in time with a positive feedback and
+              amazements by both my peers and professor to be able to pull of a project in such a handicapped situation.
+              Although there were still some concerns with the design, they can easily be solved.
+          </p>
       </div>
 
     </div>
@@ -224,56 +254,78 @@
     <div class="container-border">
       <h3 class="sub-header-contents">Project Flower</h3>
 
+      <h1 class="element-container header-contents">Flower Diary</h1>
       <div class="justify-centered-left-body-content">
-        <p> This project was a 2D side scrolling adventure type game with an emphasis on a narrative-story based
-          experience as well as its gameplay. This project was my first full video game project. While the time of
-          development was only 3 weeks, with a combined effort of 3 other people, Nicco Pucci (Co-Programmer), Yitian
-          Zhang (Co-Programmer), and Zhixiu Zhu (Artist), we were able to create an ambitious game in such a small
-          development window.
-        </p>
+          <p>This project was a 2D side scrolling adventure type game with an emphasis on a narrative-story based
+              experience as well as its gameplay. This project was my first full video game project. While the time of
+              development was only 3 weeks, with a combined effort of 3 other people, Nicco Pucci (Co-Programmer), Yitian
+              Zhang (Co-Programmer), and Zhixiu Zhu (Artist), we were able to create an ambitious game in such a small
+              development window.
+          </p>
       </div>
-
+  
+      <h1 class="element-container header-contents">Role</h1>
       <div class="justify-centered-left-body-content">
-
-        <p>
-          My role for this project was the project manager, game designer, and 2D animator.
-          As the project manager, my responsibility for my team is to keep track of everyone's task and decide the
-          time frame of which a task should be finish. Time management in this project was key, as this was our team's
-          first experience with the Unity 3D engine.
-        </p>
+          <p>
+              My role for this project was the project manager, game designer, and 2D animator.
+              As the project manager, my responsibility for my team is to keep track of everyone's task and decide the
+              time frame of which a task should be finish. Time management in this project was key, as this was our team's
+              first experience with the Unity 3D engine.
+          </p>
       </div>
-
-      <div class="justify-centered-left-body-content">
-        <p>
-          The issue I faced with my task was the 2D animation part. I used the Live2D Engine for 2D animations as part
-          of gameplay. However,
-          this engine was not meant to be used to create as part of gameplay but as a visual aesthetic such as
-          creating movements in the background.
-          Live2D Engines are mostly used to create animations for a 2D character portrait, and again for visual
-          aesthetic.
-        </p>
+  
+      <h1 class="element-container header-contents">Problem</h1>
+  
+      <div class="element-container">
+          <div class="justify-body-content">
+              <p>
+                  The issue I faced with my task was the 2D animation part. I used the Live2D Engine for 2D animations as
+                  part
+                  of gameplay. However,
+                  this engine was not meant to be used to create as part of gameplay but as a visual aesthetic such as
+                  creating movements in the background.
+                  Live2D Engines are mostly used to create animations for a 2D character portrait, and again for visual
+                  aesthetic.
+              </p>
+          </div>
+  
+          <div class="justify-body-content"> <img src="Resources/Huntsman.gif" class="project-screenshot"
+                  alt="project-flower-huntsman">
+          </div>
       </div>
-
-      <div class="justify-centered-left-body-content">
-        <p>
-          To get around this, I worked on the animation as if it was a standard animation program, meaning I worked on
-          it
-          by translating body parts manually at a certain time frame to create movements. This also includes the hair of
-          the character
-          which I had to split the hair into multiple sections to simulate a flowing movement instead of moving the
-          entire hair.
-          Then I export the animation in png frames and construct them in Unity as animation by frames.
-        </p>
+  
+      <h1 class="element-container header-contents">Solution</h1>
+  
+      <div class="element-container">
+  
+          <div class="justify-body-content"> <img src="Resources/Protagonist.gif" class="project-screenshot"
+                  id="protagonist" alt="project-flower-protagonist">
+          </div>
+  
+          <div class="justify-body-content">
+              <p>
+                  To get around this, I worked on the animation as if it was a standard animation program, meaning I
+                  worked on
+                  it
+                  by translating body parts manually at a certain time frame to create movements. This also includes the
+                  hair
+                  of the character
+                  which I had to split the hair into multiple sections to simulate a flowing movement instead of moving
+                  the
+                  entire hair.
+                  Then I export the animation in png frames and construct them in Unity as animation by frames.
+              </p>
+          </div>
       </div>
-
-      <div class="justify-centered-left-body-content">
-        <p>
-          While this solution was very clumsily implemented, within Unity Engine it worked great. With great feedback
-          about the
-          animations from the professors and peers. Live2D Engine is a program that is not very widely popularized but
-          it can
-          produce some fantastic looking animations when done right.
-        </p>
+      <h1 class="element-container header-contents">Reflection</h1>
+      <div class="justify-project-body-content">
+          <p>
+              While this solution was very clumsily implemented, within Unity Engine it worked great. With great feedback
+              about the
+              animations from the professors and peers. Live2D Engine is a program that is not very widely popularized but
+              it can
+              produce some fantastic looking animations when done right.
+          </p>
       </div>
 
     </div>
@@ -281,48 +333,54 @@
   </section>
 
   <div class="container-border">
-  <section class="service-offer">
-    <h1 class="element-container header-contents" id="contact">Contact</h1>
+    <section class="service-offer">
+      <h1 class="element-container header-contents" id="contact">Contact</h1>
 
-    <div class="element-container label-container">
+      <div class="element-container label-container">
         <div class="service-justify-content">
 
-            <form>
-                <label for="firstname" class="label-justify-content-inputs"> First Name<input type="text"
-                        id="firstname" class="text-input" placeholder=" ">
-                </label>
-                <label for="lastname" class="label-justify-content-inputs"> Last Name<input type="text"
-                        id="lastname" class="text-input" placeholder=" ">
-                </label>
-                <label for="tel-contact" class="label-justify-content-inputs"> Telephone<input type="text"
-                        id="tel-contact" class="text-input" placeholder="Contact Number">
-                </label>
-                <label for="email" class="label-justify-content-inputs"> Email <input type="text" id="email"
-                        class="text-input" placeholder="Email Address">
-                </label>
-                <label for="subject" class="label-justify-content-inputs"> Subject <input type="text" id="subject"
-                        class="text-input" placeholder=" ">
-                </label>
-                <label class="label-justify-content-inputs"> Message </label>
-                <div class="label-justify-content-inputs">
-                    <textarea class="label-justify-content-inputs" rows="10" cols="50"
-                        placeholder="Leave any messages for us here"> </textarea>
-                </div>
-            </form>
+          <form>
+            <label for="firstname" class="label-justify-content-inputs"> First Name<input type="text" id="firstname"
+                class="text-input" placeholder=" ">
+            </label>
+            <label for="lastname" class="label-justify-content-inputs"> Last Name<input type="text" id="lastname"
+                class="text-input" placeholder=" ">
+            </label>
+            <label for="tel-contact" class="label-justify-content-inputs"> Telephone<input type="text" id="tel-contact"
+                class="text-input" placeholder="Contact Number">
+            </label>
+            <label for="email" class="label-justify-content-inputs"> Email <input type="text" id="email"
+                class="text-input" placeholder="Email Address">
+            </label>
+            <label for="subject" class="label-justify-content-inputs"> Subject <input type="text" id="subject"
+                class="text-input" placeholder=" ">
+            </label>
+            <label class="label-justify-content-inputs"> Message </label>
+            <div class="label-justify-content-inputs">
+              <textarea class="label-justify-content-inputs" rows="10" cols="50"
+                placeholder="Leave any messages for us here"> </textarea>
+            </div>
+          </form>
 
 
-                <input type="submit" class="submit-reset-button nav-button-text" id="submit-btn" value="Send">
+          <input type="submit" class="submit-reset-button nav-button-text" id="submit-btn" value="Send">
 
         </div>
+      </div>
+
+
+    </section>
+  </div>
+  <div class="footer">
+      <a class="justify-footer-content element-container" href="https://github.com/SYuennan/Portfolio"> Github
+         </a>
+  
+      <a class="justify-footer-content element-container"
+        href="http://www.sfu.ca/~syuennan/Portfolio/Portfolio_Main_Site/index.html"> Main site</a>
+  
+        <a class="justify-footer-content element-container"
+        href="https://stevenyuennan.wixsite.com/portfolio"> Previous Portfolio</a>
     </div>
-
-
-</section>
-</div>
-  <!-- // COMBINED ELEMENTS SECTION -->
-  <div class="element-container empty-block"></div>
-  <!-- This creates a footer that can contain texts and images -->
-  <div class="element-container footer"></div>
 
   <script src="javascript/ui-nav.js"></script>
 </body>
