--- a/Portfolio_Main_Site/index.html
+++ b/Portfolio_Main_Site/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sirawit Yuennan's Portfolio</title>
+  <!-- Stylesheets separates into different categories -->
   <link rel="stylesheet" href="css/texts-style.css">
   <link rel="stylesheet" href="css/image-style.css">
   <link rel="stylesheet" href="css/ui-style.css">
@@ -14,14 +15,15 @@
 </head>
 
 <body>
-
+<!-- Nav sections -->
   <nav class="nav-main element-container">
     <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
     <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
     <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
-    <a href="index.html#contact" class="nav-main-items" id="projects-nav">Contact</a>
+    <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a>
   </nav>
 
+  <!-- Intro Section -->
   <div class="element-container">
     <div class="intro-wrapper-name">
       <span class="intro-text-name intro-name">
@@ -50,6 +52,7 @@
 
   <img src="Resources/Character_Sheet1.png" class="header-banner" alt="main-banner" id="intro-banner">
 
+  <!-- About Me Section -->
   <h1 class="element-container header-contents" id="about-me">About Me</h1>
   <div class="justify-centered-left-body-content">
     <p>
@@ -110,8 +113,9 @@
 
   <img src="Resources/Project-Bunker-Thumbnail1.png" class="img-body-banner" alt="bunker-banner">
 
+  <!-- Contact Section -->
   <section class="service-offer">
-    <h1 class="element-container header-contents" id="contact">Contact</h1>
+    <h3 class="element-container header-contents" id="contact">Contact</h3>
 
     <div class="element-container label-container">
       <div class="service-justify-content">
@@ -152,9 +156,14 @@
   <div class="element-container empty-block"></div>
 
   <div class="footer">
-    <p class="justify-footer-content element-container">
-      Github: https://github.com/SYuennan/Portfolio
-    </p>
+    <a class="justify-footer-content element-container" href="https://github.com/SYuennan/Portfolio"> Github
+       </a>
+
+    <a class="justify-footer-content element-container"
+      href="http://www.sfu.ca/~syuennan/Portfolio/Portfolio_Style_Guide_&_Sample_Templates/"> StyleGuide</a>
+
+      <a class="justify-footer-content element-container"
+      href="https://stevenyuennan.wixsite.com/portfolio"> Previous Portfolio</a>
   </div>
 </body>
 
