--- a/Portfolio_Style_Guide_&_Sample_Templates/project-flower.html
+++ b/Portfolio_Style_Guide_&_Sample_Templates/project-flower.html
@@ -106,7 +106,15 @@
     <div class="element-container empty-block"></div>
     <!-- This creates a footer that can contain texts and images -->
     <div class="footer">
-    </div>
+            <a class="justify-footer-content element-container" href="https://github.com/SYuennan/Portfolio"> Github
+               </a>
+        
+            <a class="justify-footer-content element-container"
+              href="http://www.sfu.ca/~syuennan/Portfolio/Portfolio_Style_Guide_&_Sample_Templates/"> StyleGuide</a>
+        
+              <a class="justify-footer-content element-container"
+              href="https://stevenyuennan.wixsite.com/portfolio"> Previous Portfolio</a>
+          </div>
 </body>
 
 </html>
