--- a/Portfolio_Main_Site/index.html
+++ b/Portfolio_Main_Site/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-<!-- Nav sections -->
+  <!-- Nav sections -->
   <nav class="nav-main element-container">
     <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
     <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
     <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
-    <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a>
+    <!-- <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a> -->
   </nav>
 
   <!-- Intro Section -->
@@ -33,19 +33,13 @@
 
     <div class="intro-wrapper-role">
       <span class="intro-text-role intro-role-gamedesign">
-        Game Designer
+        Mainly Game Designer
       </span>
     </div>
 
     <div class="intro-wrapper-role">
       <span class="intro-text-role intro-role-characterdesign">
-        Character Designer
-      </span>
-    </div>
-
-    <div class="intro-wrapper-role">
-      <span class="intro-text-role intro-role-animations">
-        Animations
+        Sometimes 3D Artist
       </span>
     </div>
   </div>
@@ -56,14 +50,12 @@
   <h1 class="element-container header-contents" id="about-me">About Me</h1>
   <div class="justify-centered-left-body-content">
     <p>
-      My name is Sirawit Yuennan. I am specialized in game design, character design, 3D modelling and animations.
-      As an aspiring video game developer, and studying in game design at
-      Simon Fraser University's School of Interactive and Technology. Aside of studying,
-      I'm working with a game development team as the 3D modeller and animator. Our current project is an artistic
-      mobile game which will be planned for a winter 2019. My skill sets including
-      knowledge in 3D modelling/animations, and game design. While my technical skills include using
-      Unity 3D Engine, Blender, Maya and Live2D Engine. Despite having a versatile skill sets, my focus is
-      on 3D works, especially animations.
+      My name is Sirawit Yuennan. I specialize in game design, with expertise in 3D modelling and animations to provide
+      a more immersive and detailed game design. As an aspiring video game design student at Simon Fraser University's
+      School of Interactive and Technology. Aside from studying, I'm work with under an independent game development
+      team as their sole 3D modeller and animator. Our current project, Project Hole-in-One is an artistic mobile game
+      which will be planned for a winter 2019 release. My technical skills include expertise in using Unity 3D Engine,
+      Blender, Maya, and the Live2D engine.
     </p>
   </div>
 
@@ -94,7 +86,7 @@
           alt="project-flower-thumbnail">
         <div class="project-thumbnail-content">
           <h2 class="image-descritption-contents"> Bunker </h2>
-          <a href="project-bunker.html"> <img src="Resources/Project-Bunker-Thumbnail1.png" class="project-thumbnail"
+          <a href="project-bunker.html"> <img src="Resources/Project-Bunker.png" class="project-thumbnail"
               id="project-bunker-thumbnail" alt="project-flower-thumbnail"> </a>
         </div>
       </div>
@@ -117,8 +109,22 @@
   <section class="service-offer">
     <h3 class="element-container header-contents" id="contact">Contact</h3>
 
-    <div class="element-container label-container">
+    <div class="element-container header-contents">
+        <p>
+          Email: sirawit.yuennan@gmail.com
+        </p>
+      </div>
+      <div class="element-container header-contents">
+          <p>
+            Linkdin: linkedin.com/in/syuennan
+          </p>
+        </div>
+
+
+    <!-- <div class="element-container label-container">
       <div class="service-justify-content">
+
+    
 
         <form>
           <label for="firstname" class="label-justify-content-inputs"> First Name<input type="text" id="firstname"
@@ -143,8 +149,7 @@
           </div>
         </form>
 
-
-        <input type="submit" class="submit-reset-button nav-button-text" id="submit-btn" value="Send">
+ <input type="submit" class="submit-reset-button nav-button-text" id="submit-btn" value="Send"> -->
 
       </div>
     </div>
@@ -156,14 +161,7 @@
   <div class="element-container empty-block"></div>
 
   <div class="footer">
-    <a class="justify-footer-content element-container" href="https://github.com/SYuennan/Portfolio"> Github
-       </a>
 
-    <a class="justify-footer-content element-container"
-      href="http://www.sfu.ca/~syuennan/Portfolio/Portfolio_Style_Guide_&_Sample_Templates/"> StyleGuide</a>
-
-      <a class="justify-footer-content element-container"
-      href="https://stevenyuennan.wixsite.com/portfolio"> Previous Portfolio</a>
   </div>
 </body>
 
