--- a/Portfolio_Main_Site/project-canvas.html
+++ b/Portfolio_Main_Site/project-canvas.html
@@ -19,7 +19,7 @@
         <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
         <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
         <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
-        <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a>
+        <!-- <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a> -->
     </nav>
 
     <div class="element-container">
@@ -36,9 +36,9 @@
     </div>
 
     <div class="justify-centered-left-body-content">
-        <p>This project was an arcade mobile game in a form of an "endless runner" with simple controls and mechanics
-            that can be picked up and played by non-gamers. This game was created using Unity 3D. The 3D art assets were
-            created using Blender, while the 2D assets were created using Clip Studio.
+        <p>Canvas is a mobile arcade game in the form of an "endless runner". It is designed to attract a wider range of
+            users, and uses simplified controls and mechanics to do so.This game was created using Unity 3D, and the
+            asset modeling is created through Blender (3D), and Clip Studio (2D).
 
         </p>
     </div>
@@ -49,13 +49,12 @@
     <div class="element-container">
         <div class="justify-body-content">
             <p>
-                The development time for this project was one month from 4 months and with a team of 4. It becomes a
-                massive
-                issue as my experience was not at the level I was comfortable with to create such a project and I didn't
-                have a team to rely on. With such a small development window, I had to manage my time carefully. Not
-                only I
-                had to design the game with the players in mind but my own abilities and limitations as well. This would
-                mean that my own creativity in designs would be hindered by my skills.
+                The development time for this project was one month from 4 months and with a team of 4. It became a
+                massive issue as my experience was not at the level I was comfortable with to create such a project and
+                the team I worked with were causing massive delays in the project.. With such a small development
+                window, I had to manage my time carefully. Not only did I have to design the game with the players in
+                mind but consider my own abilities and limitations as well. This would mean that the creative
+                expectations of canvas would not be met through a lack of skill.
             </p>
         </div>
 
@@ -74,33 +73,28 @@
 
         <div class="justify-body-content">
             <p>
-                The condition I set for myself is that it must have a core loop that is small and engaging enough for
-                the players. While the programming tasks must be within my skill level. Lastly, it should look polished
-                with appealing aesthetic to create a visual appeal.
+                The condition I set for myself is to restrict the game through a small core loop that manages to be
+                engaging players.. The rest of the development cycle was spend in making the assets look polished,
+                adding appealing aesthetics to create a visual appeal.
             </p>
         </div>
     </div>
     <h1 class="element-container header-contents">Reflection</h1>
     <div class="justify-project-body-content">
         <p>
-            Following these 3 principles, I was able to finish the project in time with a positive feedback and
-            amazements by both my peers and professor to be able to pull of a project in such a handicapped situation.
-            Although there were still some concerns with the design, they can easily be solved.
+            Following these principles, I was able to finish the project in time with positive feedback and compliments
+            by both peers and the course staff. While the projects was done with challenging conditions, it continued to
+            be a valuable lesson on balancing the complexity and design of the game design process.. Although there were
+            still some concerns with the design, they can easily be solved by continuing development in this project.
+
         </p>
     </div>
 
     <div class="element-container empty-block"></div>
     <!-- This creates a footer that can contain texts and images -->
     <div class="footer">
-            <a class="justify-footer-content element-container" href="https://github.com/SYuennan/Portfolio"> Github
-               </a>
-        
-            <a class="justify-footer-content element-container"
-              href="http://www.sfu.ca/~syuennan/Portfolio/Portfolio_Style_Guide_&_Sample_Templates/"> StyleGuide</a>
-        
-              <a class="justify-footer-content element-container"
-              href="https://stevenyuennan.wixsite.com/portfolio"> Previous Portfolio</a>
-          </div>
+
+    </div>
 </body>
 
 </html>
