--- a/Portfolio_Main_Site/project-flower.html
+++ b/Portfolio_Main_Site/project-flower.html
@@ -19,7 +19,7 @@
         <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
         <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
         <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
-        <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a>
+        <!-- <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a> -->
     </nav>
 
     <div class="element-container">
@@ -31,21 +31,25 @@
 
     <h1 class="element-container header-contents">Flower Diary</h1>
     <div class="justify-centered-left-body-content">
-        <p>This project was a 2D side scrolling adventure type game with an emphasis on a narrative-story based
-            experience as well as its gameplay. This project was my first full video game project. While the time of
-            development was only 3 weeks, with a combined effort of 3 other people, Nicco Pucci (Co-Programmer), Yitian
-            Zhang (Co-Programmer), and Zhixiu Zhu (Artist), we were able to create an ambitious game in such a small
-            development window.
+        <p>Flower Diary isa 2D side scrolling adventure game with an emphasis on creating a compulsive storytelling
+            experience. This project was a collaborative effort and is my introduction to the video game development
+            process.. While the time of development was only 3 weeks,the combined effort of 3 people, Nicco Pucci
+            (Co-Programmer), Yitian Zhang (Co-Programmer), and Zhixiu Zhu (Artist) were able to create a full featured
+            game.
         </p>
     </div>
 
     <h1 class="element-container header-contents">Role</h1>
     <div class="justify-centered-left-body-content">
         <p>
-            My role for this project was the project manager, game designer, and 2D animator.
-            As the project manager, my responsibility for my team is to keep track of everyone's task and decide the
-            time frame of which a task should be finish. Time management in this project was key, as this was our team's
-            first experience with the Unity 3D engine.
+            My roles for this project was the project manager, game designer, and 2D animator. As the project manager,
+            my responsibility for my team is to keep track of everyone's task and decide the time frame of which a task
+            should be finish. Time management in this project was key, as this was our team's first experience with the
+            Unity 3D engine.
+            One challenge that our team faced during development was getting around the constraints of the Live2D
+            engine.. The Live2D engine is not designed to be used for creating gameplay sequences,but as a supporting
+            tool, adding visual aesthetics such as creating livelier backgrounds.
+
         </p>
     </div>
 
@@ -79,42 +83,29 @@
 
         <div class="justify-body-content">
             <p>
-                To get around this, I worked on the animation as if it was a standard animation program, meaning I
-                worked on
-                it
-                by translating body parts manually at a certain time frame to create movements. This also includes the
-                hair
-                of the character
-                which I had to split the hair into multiple sections to simulate a flowing movement instead of moving
-                the
-                entire hair.
-                Then I export the animation in png frames and construct them in Unity as animation by frames.
+                To get around this constraint, I worked on the character animation as if it was animated through a
+                animation program. I translated body parts manually at a certain time frames to create movement. This
+                also includes the hair of the character which I split into multiple sections to simulate a flowing
+                movement instead of moving the entire hair. Then I export the animation in png frames and construct them
+                in Unity as animation by frames.
             </p>
         </div>
     </div>
     <h1 class="element-container header-contents">Reflection</h1>
     <div class="justify-project-body-content">
         <p>
-            While this solution was very clumsily implemented, within Unity Engine it worked great. With great feedback
-            about the
-            animations from the professors and peers. Live2D Engine is a program that is not very widely popularized but
-            it can
-            produce some fantastic looking animations when done right.
+            Adapting the same skill-set through a variety of different engines proved to be effective. In this case, I
+            emulated the animation of Live2D into the Unity engine.. With positive feedback about the animations from
+            the professors and peers. While the Live2D engine is not necessarily known for game development, it was used
+            with the appropriate knowledge to produce fantastic results.
         </p>
     </div>
 
     <div class="element-container empty-block"></div>
     <!-- This creates a footer that can contain texts and images -->
     <div class="footer">
-            <a class="justify-footer-content element-container" href="https://github.com/SYuennan/Portfolio"> Github
-               </a>
-        
-            <a class="justify-footer-content element-container"
-              href="http://www.sfu.ca/~syuennan/Portfolio/Portfolio_Style_Guide_&_Sample_Templates/"> StyleGuide</a>
-        
-              <a class="justify-footer-content element-container"
-              href="https://stevenyuennan.wixsite.com/portfolio"> Previous Portfolio</a>
-          </div>
+
+    </div>
 </body>
 
 </html>
