--- a/Portfolio_Main_Site/project-bunker.html
+++ b/Portfolio_Main_Site/project-bunker.html
@@ -19,7 +19,7 @@
         <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
         <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
         <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
-        <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a>
+        <!-- <a href="index.html#contact" class="nav-main-items" id="contact-nav">Contact</a> -->
     </nav>
 
     <div class="element-container">
@@ -28,12 +28,14 @@
         </div>
     </div>
 
-    <h1 class="element-container header-contents">Canvas</h1>
+    <h1 class="element-container header-contents">Bunker</h1>
     <div class="justify-centered-left-body-content">
-        <p>This project was a Virtual Reality project using the Oculus Rift as the medium. The project's objective was
-            to research more about whether a person can reach the same amount of presence they do when they are in the
-            same situation. With a development time of 2 months, this project was created with 3 other people, Daria
-            Kilmaseva (Co-scene designer), Rozhin Kardan (Co-3D modelling artist), and Lee McHale (Co-programmer).
+        <p>Bunker is a Virtual Reality project that incorporated the Oculus Rift to determine whether different people
+            can reach the same amount of presence when placed in the same situation. Presence is { explain presence
+            here} and it was conveyed to the users through a keen attention to the design and detail of this virtual
+            experience. This project was created within a development time of 2 months and was created with 3 other
+            people, Daria Kilmaseva (Co-scene designer), Rozhin Kardan (Co-3D modelling artist), and Lee McHale
+            (Co-programmer).
 
         </p>
     </div>
@@ -41,13 +43,13 @@
     <h1 class="element-container header-contents">Role</h1>
     <div class="justify-centered-left-body-content">
         <p>
-            My role for this project was the project manager, co-scene designer, co-modelling artist, and co-programmer.
-            As the project manager, I had to gauge my team member's experiences and their motivations to do the project.
-            From this, I try to assign tasks for them that will not stress them out along with keeping in mind that they
-            have other classes to attend as well. I also noted that should they have any trouble at all with the project
-            or the amount of work, I asked that they should tell me immediately and I would fill in the tasks they could
-            not do. This method worked well, as this keeps the team's morale high despite having very little experience
-            in Unity 3D.
+            My role for this project was mainly as the project head of the project. As the lead, I assessed my team’s
+            experience with the techniques we’d be using for the projects as well as their motivations and eagerness to
+            move forward with the project. From this, I assigned tasks for them that wouldn’t overwhelm them but rather
+            challenge them whilst maintaining a healthy balance between this project and their other courses.I also
+            became the team’s main supporting figure, providing advice and assistance regarding the project whenever my
+            team members needed it.. This method worked well, as this keeps the team's morale high and allowed the
+            project to continue smoothly, despite having very little experience in Unity 3D.
         </p>
     </div>
 
@@ -56,10 +58,11 @@
     <div class="element-container">
         <div class="justify-body-content">
             <p>
-                The problem, our team first encountered was that our team had no prior experience in using Unity. While
-                our class handled some lessons using Unity, however, it was not enough to complete the project. While
-                efforts were made in trying to learn how to use Unity with little amount of time, unfortunately it was
-                not enough to cover everything we needed for the project.
+                The problem our team first encountered was that our team had little to no prior experience in using
+                Unity, which was the main program that we used to develop Bunker. While our class handled a few lessons
+                on the Unity engine, it was not enough to complete a complete virtual experience within the allotted
+                time. While efforts were made in trying to learn how to use Unity with little amount of time,
+                unfortunately it was not enough to cover everything we needed for the project.
             </p>
         </div>
 
@@ -79,12 +82,14 @@
         <div class="justify-body-content">
             <p>
 
-                There were two different solutions I did to help my teammates. First, I tutored them on how to use Unity
-                3D on things our class had not cover. Such as the suggested polycounts for models, how lighting works in
-                Unity, and how the workflow should look like. This was helpful for my teammates as they were able to
-                slowly lighten my load on the amount of tasks I had to do. The second solution was that I handled all
-                the difficult tasks myself in order to save time. This was inevitable, but I certainly did not mind it
-                because I thought of it as improving my skills using Unity.
+                There were two different solutions I did to help my teammates. First, I provided advice on using Unity
+                3D to develop components of the project that our class had not cover. Specific examples include: the
+                suggested polycounts for models, how lighting works in Unity, and explaining an effective workflow when
+                developing a project of this scope. This was helpful as it allowed my teammates have valuable
+                contributions to the project while lacking the fundamentals to do so.. The second solution was that I
+                handled all the difficult tasks myself in order to continue to maintain the level of detail I wanted
+                this project to have. In the end, this was a valuable learning experience as it taught me a lot about
+                techniques within the Unity engine.
             </p>
         </div>
     </div>
@@ -101,15 +106,8 @@
     <div class="element-container empty-block"></div>
     <!-- This creates a footer that can contain texts and images -->
     <div class="footer">
-            <a class="justify-footer-content element-container" href="https://github.com/SYuennan/Portfolio"> Github
-               </a>
-        
-            <a class="justify-footer-content element-container"
-              href="http://www.sfu.ca/~syuennan/Portfolio/Portfolio_Style_Guide_&_Sample_Templates/"> StyleGuide</a>
-        
-              <a class="justify-footer-content element-container"
-              href="https://stevenyuennan.wixsite.com/portfolio"> Previous Portfolio</a>
-          </div>
+
+    </div>
 </body>
 
 </html>
